# backend-axum-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  data.db
migrations/: 20240101000000_init.sql
src/: db.rs  error.rs  main.rs  middleware.rs  models.rs  tests.rs
src/handlers/: auth.rs  tasks.rs
